fix: modal and swiper overflow

--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,7 @@ body {
     height: 300px;
     margin-top: 20px;
     border-radius: 10px;
+    overflow: hidden;
 }
 .swiper-slide {
     background-position: center;
